<resources>
    <string name="app_name">U.S. national debt</string>
    <string name="debt_screen_menu_label">Debt</string>
    <string name="exchange_screen_menu_label">Exchange rate</string>
    <string name="history_screen_menu_label">Debt history</string>
    <string name="settings_screen_menu_label">Settings</string>
    <string name="usa_national_debt_header">USA national debt:</string>
    <string name="national_debt_content">30 trillion\n\n224 billions\n\n115 millions\n\n228 thousands </string>
    <string name="national_debt_content_extended">30 trillion\n\n224 billions\n\n115 millions\n\n228 thousands USD\n\nGovernment spendings:\n\n228 billions USD\n\nMilitary spendings:\n\n105 billions USD\n\nSocial spendings:\n\n69 USD</string>
    <string name="select_currency">Select currency...</string>
    <string name="seven_days">7 days</string>
    <string name="fourteen_days">14 days</string>
    <string name="thirty_days">30 days</string>
    <string name="sixty_days">60 days</string>
    <string name="ninety_days">90 days</string>
    <string name="hundred_eighty_days">180 days</string>
    <string name="theme">Application theme</string>
    <string name="about_app">About this app</string>
    <string name="usd">$USD</string>
    <string name="no_network">No network</string>
    <string name="usd_cny">🇺🇸USD/CNY🇨🇳</string>
    <string name="usd_eur">🇺🇸USD/EUR🇪🇺</string>
    <string name="usd_jpy">🇺🇸USD/JPY🇯🇵</string>
    <string name="usd_gbp">🇺🇸USD/GBP🇬🇧</string>
    <string name="usd_cad">🇺🇸USD/CAD🇨🇦</string>
    <string name="usd_chf">🇺🇸USD/CHF🇨🇭</string>
    <string name="usd_aud">🇺🇸USD/AUD🇦🇺</string>
    <string name="usd_nzd">🇺🇸USD/NZD🇳🇿</string>
    <string name="currency_error">Error. Please try again later.</string>
    <string name="choose_app_theme">App theme</string>
    <string name="system_theme">System theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="about_this_app_speech">Where does the app data come from?\n\nThe application data is provided by the Bureau of the Fiscal Service, which is part of the Department of the Treasury. Fiscal Service is responsible for managing public debt, central payment systems, and government accounting.\n\nData update frequency?\n\nThe frequency may vary depending on the data type.\n\nWhy is the currency exchange rate so old?\n\nThe exchange rate shown in this app is the official exchange rate of the U.S. Government to ensure consistency for foreign currency units and U.S. dollar equivalents across all reporting done by agencies of the government. Usually, it is updated every 3 months.\n\nThe app doesn\'t work correctly or not responding?\n\nThis is my first app on Google Play, so PLEASE don\'t judge me too harshly! If you have any problems with this app, leave your feedback on Google Play.\n\nIf you like this app, rate it 5 stars. Thank you!</string>
    <string name="add_currency">Add currency</string>
    <string name="currency_header">🇺🇸 1 U.S. Dollar equals:</string>
    <string name="go_back">Back</string>
    <string name="add">Add</string>
    <string name="empty_currency_list">No currencies selected</string>
    <string name="eur">🇪🇺Euro</string>
    <string name="gbp">🇬🇧British Pound</string>
    <string name="jpy">🇯🇵Japanese Yen</string>
    <string name="cny">🇨🇳Chinese Yuan</string>
    <string name="cad">🇨🇦Canadian Dollar</string>
    <string name="aud">🇦🇺Australian Dollar</string>
    <string name="nzd">🇳🇿New Zealand Dollar</string>
    <string name="rub">🇷🇺Russian Ruble</string>
    <string name="inr">🇮🇳Indian Rupee</string>
    <string name="chf">🇨🇭Swiss Frank</string>
    <string name="hkd">🇭🇰Hong Kong Dollar</string>
    <string name="sek">🇸🇪Swedish Krona</string>
    <string name="krw">🇰🇷Korean Won</string>
    <string name="nok">🇳🇴Norwegian Krona</string>
    <string name="mxn">🇲🇽Mexican Peso</string>
    <string name="zar">🇿🇦South African Rand</string>
    <string name="brl">🇧🇷Brazilian Real</string>
</resources>