<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/debtFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/debt_screen_menu_label"/>
    <item
        android:id="@+id/Currencies"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_currency_exchange_24"
        android:title="@string/exchange_screen_menu_label"/>
    <item
        android:id="@+id/historyFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history_screen_menu_label"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings_screen_menu_label"/>
</menu>